@@ -35,14 +35,24 @@
   <description>The Apache Commons Parent Pom provides common settings for all Apache Commons components.</description>
 
 <!--
-Version 25:
+Version 26:
+  FELIX-3037 has been fixed so the profile java-1.5-detected is no longer needed.
+
   Updated various plugin versions:
-    clirr-maven-plugin: 2.3 => 2.4; 
-    clirr & RAT added to pluginManagement so can override the version from Apache POM          
-    Add changes and jira reports       
+            maven-changes-plugin: 2.6 => 2.7.1
+            maven-clean-plugin: 2.4.1 => 2.5
+            maven-compiler-plugin: 2.3.2 => 2.5.1
+            maven-project-info-reports-plugin: 2.4 => 2.5
+            maven-release-plugin: 2.2.2 => 2.3.2
+            maven-remote-resources-plugin: 1.2.1 => 1.3
+            maven-site-plugin: 3.0 => 3.1
+            maven-source-plugin: 2.1.2 => 2.2
+            maven-surefire-plugin: 2.12 => 2.12.2
+            maven-surefire-report-plugin: 2.12 => 2.12.2
+            org.codehaus.mojo:buildnumber-maven-plugin: 1.0 => 1.1
 
 For full details see:
-http://svn.apache.org/repos/asf/commons/proper/commons-parent/tags/commons-parent-25/RELEASE-NOTES.txt
+http://svn.apache.org/repos/asf/commons/proper/commons-parent/tags/commons-parent-26/RELEASE-NOTES.txt
  -->
 
   <!-- Now required by versions plugin -->
@@ -210,12 +220,12 @@ http://svn.apache.org/repos/asf/commons/proper/commons-parent/tags/commons-paren
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>2.4.1</version>
+          <version>2.5</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>2.5.1</version>
           <configuration>
             <source>${maven.compile.source}</source>
             <target>${maven.compile.target}</target>
@@ -271,14 +281,14 @@ http://svn.apache.org/repos/asf/commons/proper/commons-parent/tags/commons-paren
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.2.2</version>
+          <version>2.3.2</version>
         </plugin>
         <plugin>
           <!-- TODO see above - find better way to add N&L files to jars and test jars -->
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-remote-resources-plugin</artifactId>
           <!-- override old version from Apache pom 9 -->
-          <version>1.2.1</version>
+          <version>1.3</version>
           <configuration>
             <!--
                 apache parent pom automatically adds "LICENSE" and "NOTICE" files
@@ -297,12 +307,12 @@ http://svn.apache.org/repos/asf/commons/proper/commons-parent/tags/commons-paren
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>3.0</version>
+          <version>3.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.1.2</version>
+          <version>2.2</version>
           <configuration>
             <archive>
               <manifest>
@@ -340,7 +350,7 @@ http://svn.apache.org/repos/asf/commons/proper/commons-parent/tags/commons-paren
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>buildnumber-maven-plugin</artifactId>
-          <version>1.0</version>
+          <version>1.1</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -1121,14 +1131,14 @@ http://svn.apache.org/repos/asf/commons/proper/commons-parent/tags/commons-paren
     <commons.surefire.java />
 
     <!-- plugin versions (allows same value in reporting and build sections) -->
-    <commons.surefire.version>2.12</commons.surefire.version>
-    <commons.surefire-report.version>2.12</commons.surefire-report.version>
+    <commons.surefire.version>2.12.2</commons.surefire.version>
+    <commons.surefire-report.version>2.12.2</commons.surefire-report.version>
     <commons.javadoc.version>2.8.1</commons.javadoc.version>
     <commons.rat.version>0.8</commons.rat.version>
-    <commons.changes.version>2.7</commons.changes.version>
+    <commons.changes.version>2.7.1</commons.changes.version>
     <commons.clirr.version>2.4</commons.clirr.version>
     <commons.jxr.version>2.3</commons.jxr.version>
-    <commons.project-info.version>2.4</commons.project-info.version>
+    <commons.project-info.version>2.5</commons.project-info.version>
     <commons.wagon-ssh.version>2.2</commons.wagon-ssh.version>
 
 
